frontend/tests/cases/negative/wildOrderAbs.gr
foo : Int -> Int
foo _ = 42;
foo 1 = 42
