frontend/tests/cases/negative/wildOrderAbs.gr.output
Type checking failed: 
Linearity error: frontend/tests/cases/negative/wildOrderAbs.gr:2:5:
Wildcard pattern `_` allowing a value to be discarded